<resources>
    <string name="app_name">Entreguei</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_register">Register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="error_email_empty">email cannot be empty</string>
    <string name="error_password_empty">Password cannot be empty</string>
    <string name="error_password_little">password must be at least 6 characters long</string>
    <string name="error_email_invalid">The e-mail is not valid</string>
    <string name="error_register_new_motoboy">Unable to register new user, email may be in use</string>
    <string name="action_login">Login</string>
    <string name="error_login">Ops! user not found, check your email and password</string>
    <string name="msg_search_cep">Enter with your Cep</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="action_save">Save</string>
    <string name="title_warning">Warning!</string>
    <string name="message_remove_address">Do you want to remove this address?</string>
    <string name="action_yes">yes</string>
    <string name="action_no">No</string>
    <string name="title_welcome_to_entreguei">Welcome to Entreguei!</string>
    <string name="title_my_addresses">My Addresses</string>
    <string name="separator"> - </string>
    <string name="msg_no_address_found">no address found</string>
    <string name="title_address_detal">Address Detail</string>
    <string name="msg_start_your_search">Start your search</string>
    <string name="error_address_not_found">Address not found!</string>
    <string name="error_registered_address">Registered Address!</string>
    <string name="msg_address_saved_with_success">Address saved with success!</string>
</resources>
